tests/all_arith/all_arith.exp
Error ------------------------------------------------------------------------------------------------ all_arith.js:24:2

Cannot use operator `+` with operands number [1] and bigint [2] [unsafe-addition]

   all_arith.js:24:2
   24| (aNumber + aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:25:2

Cannot use operator `+` with operands number [1] and `Date` [2] [unsafe-addition]

   all_arith.js:25:2
   25| (aNumber + aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:6:22
    6| declare const aDate: Date;
                            ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:26:2

Cannot use operator `+` with operands number [1] and boolean [2] [unsafe-addition]

   all_arith.js:26:2
   26| (aNumber + aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:7:25
    7| declare const aBoolean: boolean;
                               ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:27:2

Cannot use operator `+` with operands number [1] and `T` [2] [unsafe-addition]

   all_arith.js:27:2
   27| (aNumber + aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:8:19
    8| declare const aT: T;
                         ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:28:2

Cannot use operator `+` with operands number [1] and null [2] [unsafe-addition]

   all_arith.js:28:2
   28| (aNumber + null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:28:12
   28| (aNumber + null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:29:2

Cannot use operator `+` with operands number [1] and array type [2] [unsafe-addition]

   all_arith.js:29:2
   29| (aNumber + anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:11:24
   11| declare const anArray: Array<empty>
                              ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:30:2

Cannot use operator `+` with operands number [1] and object type [2] [unsafe-addition]

   all_arith.js:30:2
   30| (aNumber + anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:12:25
   12| declare const anObject: {}
                               ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:31:2

Cannot use operator `+` with operands number [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:31:2
   31| (aNumber + aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:13:23
   13| declare const aMixed: unknown;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:37:2

Cannot use operator `*` with operands number [1] and string [2] [unsafe-arithmetic]

   all_arith.js:37:2
   37| (aNumber * aString); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:38:2

Cannot use operator `*` with operands number [1] and bigint [2] [unsafe-arithmetic]

   all_arith.js:38:2
   38| (aNumber * aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:39:2

Cannot use operator `*` with operands number [1] and `Date` [2] [unsafe-arithmetic]

   all_arith.js:39:2
   39| (aNumber * aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:6:22
    6| declare const aDate: Date;
                            ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:40:2

Cannot use operator `*` with operands number [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:40:2
   40| (aNumber * aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:7:25
    7| declare const aBoolean: boolean;
                               ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:41:2

Cannot use operator `*` with operands number [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:41:2
   41| (aNumber * aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:8:19
    8| declare const aT: T;
                         ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:42:2

Cannot use operator `*` with operands number [1] and null [2] [unsafe-arithmetic]

   all_arith.js:42:2
   42| (aNumber * null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:42:12
   42| (aNumber * null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:43:2

Cannot use operator `*` with operands number [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:43:2
   43| (aNumber * anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:11:24
   11| declare const anArray: Array<empty>
                              ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:44:2

Cannot use operator `*` with operands number [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:44:2
   44| (aNumber * anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:12:25
   12| declare const anObject: {}
                               ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:45:2

Cannot use operator `*` with operands number [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:45:2
   45| (aNumber * aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:3:24
    3| declare const aNumber: number;
                              ^^^^^^ [1]
   all_arith.js:13:23
   13| declare const aMixed: unknown;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:51:2

Cannot use operator `+` with operands string [1] and bigint [2] [unsafe-addition]

   all_arith.js:51:2
   51| (aString + aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:52:2

Cannot use operator `+` with operands string [1] and `Date` [2] [unsafe-addition]

   all_arith.js:52:2
   52| (aString + aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:6:22
    6| declare const aDate: Date;
                            ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:53:2

Cannot use operator `+` with operands string [1] and boolean [2] [unsafe-addition]

   all_arith.js:53:2
   53| (aString + aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:7:25
    7| declare const aBoolean: boolean;
                               ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:54:2

Cannot use operator `+` with operands string [1] and `T` [2] [unsafe-addition]

   all_arith.js:54:2
   54| (aString + aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:8:19
    8| declare const aT: T;
                         ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:55:2

Cannot use operator `+` with operands string [1] and null [2] [unsafe-addition]

   all_arith.js:55:2
   55| (aString + null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:55:12
   55| (aString + null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:56:2

Cannot use operator `+` with operands string [1] and array type [2] [unsafe-addition]

   all_arith.js:56:2
   56| (aString + anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:11:24
   11| declare const anArray: Array<empty>
                              ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:57:2

Cannot use operator `+` with operands string [1] and object type [2] [unsafe-addition]

   all_arith.js:57:2
   57| (aString + anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:12:25
   12| declare const anObject: {}
                               ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:58:2

Cannot use operator `+` with operands string [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:58:2
   58| (aString + aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:13:23
   13| declare const aMixed: unknown;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:63:2

Cannot use operator `*` with operands string [1] and string [1] [unsafe-arithmetic]

   all_arith.js:63:2
   63| (aString * aString); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ all_arith.js:64:2

Cannot use operator `*` with operands string [1] and bigint [2] [unsafe-arithmetic]

   all_arith.js:64:2
   64| (aString * aBigint); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:65:2

Cannot use operator `*` with operands string [1] and `Date` [2] [unsafe-arithmetic]

   all_arith.js:65:2
   65| (aString * aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:6:22
    6| declare const aDate: Date;
                            ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:66:2

Cannot use operator `*` with operands string [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:66:2
   66| (aString * aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:7:25
    7| declare const aBoolean: boolean;
                               ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:67:2

Cannot use operator `*` with operands string [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:67:2
   67| (aString * aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:8:19
    8| declare const aT: T;
                         ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:68:2

Cannot use operator `*` with operands string [1] and null [2] [unsafe-arithmetic]

   all_arith.js:68:2
   68| (aString * null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:68:12
   68| (aString * null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:69:2

Cannot use operator `*` with operands string [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:69:2
   69| (aString * anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:11:24
   11| declare const anArray: Array<empty>
                              ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:70:2

Cannot use operator `*` with operands string [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:70:2
   70| (aString * anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:12:25
   12| declare const anObject: {}
                               ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:71:2

Cannot use operator `*` with operands string [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:71:2
   71| (aString * aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:4:24
    4| declare const aString: string;
                              ^^^^^^ [1]
   all_arith.js:13:23
   13| declare const aMixed: unknown;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:77:2

Cannot use operator `+` with operands bigint [1] and `Date` [2] [unsafe-addition]

   all_arith.js:77:2
   77| (aBigint + aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:6:22
    6| declare const aDate: Date;
                            ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:78:2

Cannot use operator `+` with operands bigint [1] and boolean [2] [unsafe-addition]

   all_arith.js:78:2
   78| (aBigint + aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:7:25
    7| declare const aBoolean: boolean;
                               ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:79:2

Cannot use operator `+` with operands bigint [1] and `T` [2] [unsafe-addition]

   all_arith.js:79:2
   79| (aBigint + aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:8:19
    8| declare const aT: T;
                         ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:80:2

Cannot use operator `+` with operands bigint [1] and null [2] [unsafe-addition]

   all_arith.js:80:2
   80| (aBigint + null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:80:12
   80| (aBigint + null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:81:2

Cannot use operator `+` with operands bigint [1] and array type [2] [unsafe-addition]

   all_arith.js:81:2
   81| (aBigint + anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:11:24
   11| declare const anArray: Array<empty>
                              ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:82:2

Cannot use operator `+` with operands bigint [1] and object type [2] [unsafe-addition]

   all_arith.js:82:2
   82| (aBigint + anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:12:25
   12| declare const anObject: {}
                               ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:83:2

Cannot use operator `+` with operands bigint [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:83:2
   83| (aBigint + aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:13:23
   13| declare const aMixed: unknown;
                             ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:89:2

Cannot use operator `*` with operands bigint [1] and `Date` [2] [unsafe-arithmetic]

   all_arith.js:89:2
   89| (aBigint * aDate); // error
        ^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:6:22
    6| declare const aDate: Date;
                            ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:90:2

Cannot use operator `*` with operands bigint [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:90:2
   90| (aBigint * aBoolean); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:7:25
    7| declare const aBoolean: boolean;
                               ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:91:2

Cannot use operator `*` with operands bigint [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:91:2
   91| (aBigint * aT); // error
        ^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:8:19
    8| declare const aT: T;
                         ^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:92:2

Cannot use operator `*` with operands bigint [1] and null [2] [unsafe-arithmetic]

   all_arith.js:92:2
   92| (aBigint * null); // error
        ^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:92:12
   92| (aBigint * null); // error
                  ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:93:2

Cannot use operator `*` with operands bigint [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:93:2
   93| (aBigint * anArray); // error
        ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:11:24
   11| declare const anArray: Array<empty>
                              ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:94:2

Cannot use operator `*` with operands bigint [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:94:2
   94| (aBigint * anObject); // error
        ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:12:25
   12| declare const anObject: {}
                               ^^ [2]


Error ------------------------------------------------------------------------------------------------ all_arith.js:95:2

Cannot use operator `*` with operands bigint [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:95:2
   95| (aBigint * aMixed); // error
        ^^^^^^^^^^^^^^^^

References:
   all_arith.js:5:24
    5| declare const aBigint: bigint;
                              ^^^^^^ [1]
   all_arith.js:13:23
   13| declare const aMixed: unknown;
                             ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:100:2

Cannot use operator `+` with operands `Date` [1] and `Date` [1] [unsafe-addition]

   all_arith.js:100:2
   100| (aDate + aDate); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:101:2

Cannot use operator `+` with operands `Date` [1] and boolean [2] [unsafe-addition]

   all_arith.js:101:2
   101| (aDate + aBoolean); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:102:2

Cannot use operator `+` with operands `Date` [1] and `T` [2] [unsafe-addition]

   all_arith.js:102:2
   102| (aDate + aT); // error
         ^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:103:2

Cannot use operator `+` with operands `Date` [1] and null [2] [unsafe-addition]

   all_arith.js:103:2
   103| (aDate + null); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:103:10
   103| (aDate + null); // error
                 ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:104:2

Cannot use operator `+` with operands `Date` [1] and array type [2] [unsafe-addition]

   all_arith.js:104:2
   104| (aDate + anArray); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:105:2

Cannot use operator `+` with operands `Date` [1] and object type [2] [unsafe-addition]

   all_arith.js:105:2
   105| (aDate + anObject); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:106:2

Cannot use operator `+` with operands `Date` [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:106:2
   106| (aDate + aMixed); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:111:2

Cannot use operator `*` with operands `Date` [1] and `Date` [1] [unsafe-arithmetic]

   all_arith.js:111:2
   111| (aDate * aDate); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:112:2

Cannot use operator `*` with operands `Date` [1] and boolean [2] [unsafe-arithmetic]

   all_arith.js:112:2
   112| (aDate * aBoolean); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:113:2

Cannot use operator `*` with operands `Date` [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:113:2
   113| (aDate * aT); // error
         ^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:114:2

Cannot use operator `*` with operands `Date` [1] and null [2] [unsafe-arithmetic]

   all_arith.js:114:2
   114| (aDate * null); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:114:10
   114| (aDate * null); // error
                 ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:115:2

Cannot use operator `*` with operands `Date` [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:115:2
   115| (aDate * anArray); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:116:2

Cannot use operator `*` with operands `Date` [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:116:2
   116| (aDate * anObject); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:117:2

Cannot use operator `*` with operands `Date` [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:117:2
   117| (aDate * aMixed); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:6:22
     6| declare const aDate: Date;
                             ^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:122:2

Cannot use operator `+` with operands boolean [1] and boolean [1] [unsafe-addition]

   all_arith.js:122:2
   122| (aBoolean + aBoolean); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:123:2

Cannot use operator `+` with operands boolean [1] and `T` [2] [unsafe-addition]

   all_arith.js:123:2
   123| (aBoolean + aT); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:124:2

Cannot use operator `+` with operands boolean [1] and null [2] [unsafe-addition]

   all_arith.js:124:2
   124| (aBoolean + null); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:124:13
   124| (aBoolean + null); // error
                    ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:125:2

Cannot use operator `+` with operands boolean [1] and array type [2] [unsafe-addition]

   all_arith.js:125:2
   125| (aBoolean + anArray); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:126:2

Cannot use operator `+` with operands boolean [1] and object type [2] [unsafe-addition]

   all_arith.js:126:2
   126| (aBoolean + anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:127:2

Cannot use operator `+` with operands boolean [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:127:2
   127| (aBoolean + aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:132:2

Cannot use operator `*` with operands boolean [1] and boolean [1] [unsafe-arithmetic]

   all_arith.js:132:2
   132| (aBoolean * aBoolean); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:133:2

Cannot use operator `*` with operands boolean [1] and `T` [2] [unsafe-arithmetic]

   all_arith.js:133:2
   133| (aBoolean * aT); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:134:2

Cannot use operator `*` with operands boolean [1] and null [2] [unsafe-arithmetic]

   all_arith.js:134:2
   134| (aBoolean * null); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:134:13
   134| (aBoolean * null); // error
                    ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:135:2

Cannot use operator `*` with operands boolean [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:135:2
   135| (aBoolean * anArray); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:136:2

Cannot use operator `*` with operands boolean [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:136:2
   136| (aBoolean * anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:137:2

Cannot use operator `*` with operands boolean [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:137:2
   137| (aBoolean * aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:7:25
     7| declare const aBoolean: boolean;
                                ^^^^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:142:2

Cannot use operator `+` with operands `T` [1] and `T` [1] [unsafe-addition]

   all_arith.js:142:2
   142| (aT + aT); // error
         ^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:143:2

Cannot use operator `+` with operands `T` [1] and null [2] [unsafe-addition]

   all_arith.js:143:2
   143| (aT + null); // error
         ^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:143:7
   143| (aT + null); // error
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:144:2

Cannot use operator `+` with operands `T` [1] and array type [2] [unsafe-addition]

   all_arith.js:144:2
   144| (aT + anArray); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:145:2

Cannot use operator `+` with operands `T` [1] and object type [2] [unsafe-addition]

   all_arith.js:145:2
   145| (aT + anObject); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:146:2

Cannot use operator `+` with operands `T` [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:146:2
   146| (aT + aMixed); // error
         ^^^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:151:2

Cannot use operator `*` with operands `T` [1] and `T` [1] [unsafe-arithmetic]

   all_arith.js:151:2
   151| (aT * aT); // error
         ^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:152:2

Cannot use operator `*` with operands `T` [1] and null [2] [unsafe-arithmetic]

   all_arith.js:152:2
   152| (aT * null); // error
         ^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:152:7
   152| (aT * null); // error
              ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:153:2

Cannot use operator `*` with operands `T` [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:153:2
   153| (aT * anArray); // error
         ^^^^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:154:2

Cannot use operator `*` with operands `T` [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:154:2
   154| (aT * anObject); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:155:2

Cannot use operator `*` with operands `T` [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:155:2
   155| (aT * aMixed); // error
         ^^^^^^^^^^^

References:
   all_arith.js:8:19
     8| declare const aT: T;
                          ^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:160:2

Cannot use operator `+` with operands null [1] and null [2] [unsafe-addition]

   all_arith.js:160:2
   160| (null + null); // error
         ^^^^^^^^^^^

References:
   all_arith.js:160:2
   160| (null + null); // error
         ^^^^ [1]
   all_arith.js:160:9
   160| (null + null); // error
                ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:161:2

Cannot use operator `+` with operands null [1] and array type [2] [unsafe-addition]

   all_arith.js:161:2
   161| (null + anArray); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:161:2
   161| (null + anArray); // error
         ^^^^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:162:2

Cannot use operator `+` with operands null [1] and object type [2] [unsafe-addition]

   all_arith.js:162:2
   162| (null + anObject); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:162:2
   162| (null + anObject); // error
         ^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:163:2

Cannot use operator `+` with operands null [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:163:2
   163| (null + aMixed); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:163:2
   163| (null + aMixed); // error
         ^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:168:2

Cannot use operator `*` with operands null [1] and null [2] [unsafe-arithmetic]

   all_arith.js:168:2
   168| (null * null); // error
         ^^^^^^^^^^^

References:
   all_arith.js:168:2
   168| (null * null); // error
         ^^^^ [1]
   all_arith.js:168:9
   168| (null * null); // error
                ^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:169:2

Cannot use operator `*` with operands null [1] and array type [2] [unsafe-arithmetic]

   all_arith.js:169:2
   169| (null * anArray); // error
         ^^^^^^^^^^^^^^

References:
   all_arith.js:169:2
   169| (null * anArray); // error
         ^^^^ [1]
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:170:2

Cannot use operator `*` with operands null [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:170:2
   170| (null * anObject); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:170:2
   170| (null * anObject); // error
         ^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:171:2

Cannot use operator `*` with operands null [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:171:2
   171| (null * aMixed); // error
         ^^^^^^^^^^^^^

References:
   all_arith.js:171:2
   171| (null * aMixed); // error
         ^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:176:2

Cannot use operator `+` with operands array type [1] and array type [1] [unsafe-addition]

   all_arith.js:176:2
   176| (anArray + anArray); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:177:2

Cannot use operator `+` with operands array type [1] and object type [2] [unsafe-addition]

   all_arith.js:177:2
   177| (anArray + anObject); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:178:2

Cannot use operator `+` with operands array type [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:178:2
   178| (anArray + aMixed); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:183:2

Cannot use operator `*` with operands array type [1] and array type [1] [unsafe-arithmetic]

   all_arith.js:183:2
   183| (anArray * anArray); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:184:2

Cannot use operator `*` with operands array type [1] and object type [2] [unsafe-arithmetic]

   all_arith.js:184:2
   184| (anArray * anObject); // error
         ^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [1]
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:185:2

Cannot use operator `*` with operands array type [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:185:2
   185| (anArray * aMixed); // error
         ^^^^^^^^^^^^^^^^

References:
   all_arith.js:11:24
    11| declare const anArray: Array<empty>
                               ^^^^^^^^^^^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:190:2

Cannot use operator `+` with operands object type [1] and object type [1] [unsafe-addition]

   all_arith.js:190:2
   190| (anObject + anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:191:2

Cannot use operator `+` with operands object type [1] and `unknown` [2] [unsafe-addition]

   all_arith.js:191:2
   191| (anObject + aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:196:2

Cannot use operator `*` with operands object type [1] and object type [1] [unsafe-arithmetic]

   all_arith.js:196:2
   196| (anObject * anObject); // error
         ^^^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:197:2

Cannot use operator `*` with operands object type [1] and `unknown` [2] [unsafe-arithmetic]

   all_arith.js:197:2
   197| (anObject * aMixed); // error
         ^^^^^^^^^^^^^^^^^

References:
   all_arith.js:12:25
    12| declare const anObject: {}
                                ^^ [1]
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- all_arith.js:202:2

Cannot use operator `+` with operands `unknown` [1] and `unknown` [1] [unsafe-addition]

   all_arith.js:202:2
   202| (aMixed + aMixed); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:207:2

Cannot use operator `*` with operands `unknown` [1] and `unknown` [1] [unsafe-arithmetic]

   all_arith.js:207:2
   207| (aMixed * aMixed); // error
         ^^^^^^^^^^^^^^^

References:
   all_arith.js:13:23
    13| declare const aMixed: unknown;
                              ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:227:2

Cannot perform unsigned right shift because bigint [1] is a bigint, and all bigints are signed.
[bigint-unsigned-right-shift]

   all_arith.js:227:2
   227| (aBigint >>> aBigint); // error
         ^^^^^^^

References:
   all_arith.js:5:24
     5| declare const aBigint: bigint;
                               ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- all_arith.js:228:2

Cannot perform unsigned right shift because bigint [1] is a bigint, and all bigints are signed.
[bigint-unsigned-right-shift]

   all_arith.js:228:2
   228| (aBigint >>> aNumber); // error
         ^^^^^^^

References:
   all_arith.js:5:24
     5| declare const aBigint: bigint;
                               ^^^^^^ [1]



Found 106 errors
